@@ -40,6 +40,8 @@
   * use monotonic clock where available (eg. linux 2.6) so system clock
     updates won't disturb xine playback. [bug #781532]
   * fixed seeking unresponsiveness when using external subtitles
+  * Allowed multiple simultaneous thread access in parts of the xxmc driver, 
+    assuming that XvMC libraries are thread-safe.
         
 xine-lib (1-rc6)
   * Moved win32 frontend into separate module.
